--- a/src/scss/04_layout/_header.scss
+++ b/src/scss/04_layout/_header.scss
@@ -4,6 +4,10 @@ body {
   height: 100%;
 }
 
+.title {
+  color: var(--color-secondary);
+}
+
 .main {
   max-width: 144rem;
   margin: 0 auto;
@@ -45,68 +49,6 @@ a:hover.link {
   z-index: 99;
   margin-left: 1.6rem;
 }
-//@at-root
-.js .loading::before {
-  content: '';
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--color-bg);
-}
-
-.js .loading::after {
-  content: '';
-  position: fixed;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
-  width: 60px;
-  height: 60px;
-  margin: -30px 0 0 -30px;
-  pointer-events: none;
-  border-radius: 50%;
-  opacity: 0.4;
-  background: var(--color-link);
-  animation: loaderAnim 0.7s linear infinite alternate forwards;
-}
-
-@keyframes loaderAnim {
-  to {
-    z-index: 1;
-    opacity: 1;
-    transform: scale3d(0.5, 0.5, 1);
-  }
-}
-
-.frame {
-  z-index: 1;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-}
-
-.content {
-  z-index: 1;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.content__img {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-}
 
 @media only screen and (max-width: 767px) {
-  
 }
