--- a/src/scss/04_layout/_footer.scss
+++ b/src/scss/04_layout/_footer.scss
@@ -1,5 +1,12 @@
-a {
-  display: inline-block;
+a.icon {
+  display: flex;
+  flex-direction: column;
+}
+
+.img {
+  display: flex;
+  width: 32px;
+  height: 32px;
 }
 .icon {
   width: 32px;
