--- a/src/scss/03_system/_typography.scss
+++ b/src/scss/03_system/_typography.scss
@@ -4,31 +4,21 @@
 ////
 ///////
 
-// Text-Large
-.text-current {
-  font-family: 'MarrSansRegular';
+.text-h1 {
+  font-family: 'Marr Sans Web';
   font-size: 3.4rem;
+  font-weight: 400;
   line-height: 5.2rem;
+  letter-spacing: 0.05px;
   color: var(--color-secondary);
 }
 
-.text-medium {
-  font-family: 'MarrSansMedium';
+.text-h2 {
+  //styleName: 1440/heading/h2;
+  font-family: 'Marr Sans Web';
   font-size: 1.8rem;
-  line-height: 3.4rem;
+  font-weight: 600;
+  line-height: 1.8rem;
+  letter-spacing: 0.05px;
   color: var(--color-secondary);
-}
-
-.text-small {
-  font-family: 'MarrSansRegular';
-  font-size: 1.6rem;
-  line-height: 1.4rem;
-  color: var(--color-secondary);
-}
-
-.text-caption {
-  font-family: 'MarrSansRegular';
-  font-size: 1.4rem;
-  line-height: 1.4rem;
-  color: #858585;
 }
