--- a/src/scss/04_layout/_footer.scss
+++ b/src/scss/04_layout/_footer.scss
@@ -1,14 +1,19 @@
-a.icon {
+.social-container {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  :nth-child(2) {
+    margin-left: 1.6rem;
+  }
 }
 
-.img {
-  display: flex;
+a.icon {
+  margin: 0.8rem;
   width: 32px;
   height: 32px;
-}
-.icon {
-  width: 32px;
-  height: 32px;
+  cursor: pointer;
+  .img {
+    display: flex;
+    width: 32px;
+    height: 32px;
+  }
 }
