--- a/src/scss/03_system/_typography.scss
+++ b/src/scss/03_system/_typography.scss
@@ -14,11 +14,21 @@
 }
 
 .text-h2 {
-  //styleName: 1440/heading/h2;
   font-family: 'Marr Sans Web';
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.8rem;
   letter-spacing: 0.05px;
   color: var(--color-secondary);
+}
+
+@media only screen and (max-width: 767px) {
+  .text-h1-m {
+    font-size: 2.4rem;
+    line-height: 4.2rem;
+  }
+
+  .text-h2-m {
+    font-size: 1.8rem;
+  }
 }
