--- a/src/scss/04_layout/_container.scss
+++ b/src/scss/04_layout/_container.scss
@@ -1,3 +1,9 @@
+////////
+////
+//// Container
+////
+///////
+
 .main {
   max-width: 144rem;
   margin: 0 auto;
@@ -52,7 +58,7 @@
 }
 
 .image-3 {
-  top: 10%;
+  top: 5%;
 }
 
 .image-4 {
@@ -77,5 +83,34 @@
   to {
     scale: 1;
     opacity: 1;
+  }
+}
+
+.contact {
+  margin-top: 40px;
+}
+
+////////
+////
+//// Container Mobile
+////
+///////
+
+@media only screen and (max-width: 767px) {
+  h1 {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+  }
+  a {
+    margin: 15px 0;
+  }
+
+  .button {
+    margin: 0;
+  }
+
+  .contact {
+    margin-top: 0;
   }
 }
