--- a/src/scss/03_system/_typography.scss
+++ b/src/scss/03_system/_typography.scss
@@ -4,10 +4,8 @@
 ////
 ///////
 
-
-
 .text-h1 {
-  font-family: 'Marr Sans Web';
+  font-family: 'marr_sans_webregular';
   font-size: 3.4rem;
   font-weight: 400;
   line-height: 5.2rem;
@@ -16,7 +14,7 @@
 }
 
 .text-h2 {
-  font-family: 'Marr Sans Web';
+  font-family: 'marr_sans_webmedium';
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.8rem;
