--- a/src/scss/04_layout/_background.scss
+++ b/src/scss/04_layout/_background.scss
@@ -4,11 +4,25 @@
 ////
 ///////
 
-.shape {
-  height: 100vh;
+.background--custom {
+  background-color: #ffffff;
   width: 100vw;
-  position: fixed;
+  height: 100vh;
+  position: absolute;
+  overflow: hidden;
+  z-index: -2;
   top: 0;
   left: 0;
+}
+canvas#canvas {
+  z-index: -1;
   position: absolute;
+  width: 100%;
+  height: 60%;
+  transform: rotate(-12deg) scale(2) translateY(-56%);
+  --gradient-color-1: #88730b;
+  --gradient-color-2: #e0c335;
+  --gradient-color-3: #d121de;
+  --gradient-color-4: #f06b34;
+  --gradient-speed: 0.000006;
 }
