--- a/src/scss/04_layout/_background.scss
+++ b/src/scss/04_layout/_background.scss
@@ -5,24 +5,20 @@
 ///////
 
 .background--custom {
-  background-color: #ffffff;
-  width: 100vw;
-  height: 100vh;
+  background: linear-gradient(90deg, #418af7, #0c0c0c);
+  background-size: 300% 300%;
+  animation: gradient 8s alternate infinite;
   position: absolute;
-  overflow: hidden;
-  z-index: -2;
   top: 0;
   left: 0;
-}
-canvas#canvas {
-  z-index: -1;
-  position: absolute;
+  height: 100%;
   width: 100%;
-  height: 60%;
-  transform: rotate(-12deg) scale(2) translateY(-56%);
-  --gradient-color-1: #88730b;
-  --gradient-color-2: #e0c335;
-  --gradient-color-3: #d121de;
-  --gradient-color-4: #f06b34;
-  --gradient-speed: 0.000006;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
