added project images

--- a/src/scss/04_layout/_header.scss
+++ b/src/scss/04_layout/_header.scss
@@ -4,8 +4,17 @@ body {
   height: 100%;
 }
 
+.header {
+  width: 100vw;
+  height: 100vh;
+}
+
 .title {
   color: var(--color-secondary);
+}
+
+.wrapper-header {
+  height: 250px;
 }
 
 .footer {
@@ -22,6 +31,28 @@ body {
 
 .front {
   z-index: 99;
+}
+
+.background--custom {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: -2;
+  top: 0;
+  left: 0;
+}
+canvas#canvas {
+  z-index: -1;
+  position: fixed;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  transform: scale(2) translateY(0%);
+  --gradient-color-1: #000000;
+  --gradient-color-2: #4897f7;
+  --gradient-color-3: #010676;
+  --gradient-color-4: #010676;
+  --gradient-speed: 0.000002;
 }
 
 @media only screen and (max-width: 767px) {
