--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -20,5 +20,5 @@
 /* 04_layout */
 @import './04_layout/header.scss';
 @import './04_layout/container.scss';
-@import './04_layout/background.scss';
 @import './04_layout/footer.scss';
+@import './04_layout/thumbnails.scss';
