--- a/src/scss/04_layout/_thumbnails.scss
+++ b/src/scss/04_layout/_thumbnails.scss
@@ -4,7 +4,8 @@
 ////
 ///////
 
-.container-thumbnails {
-  background-color: grey;
-  height: 5000px;
+.container-project {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 32px;
 }
