--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -18,7 +18,8 @@
 @import './03_system/typography.scss';
 
 /* 04_layout */
-@import './04_layout/header.scss';
+@import './04_layout/nav.scss';
 @import './04_layout/container.scss';
 @import './04_layout/footer.scss';
 @import './04_layout/thumbnails.scss';
+@import './04_layout/header.scss';
