--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -21,5 +21,5 @@
 @import './04_layout/nav.scss';
 @import './04_layout/container.scss';
 @import './04_layout/footer.scss';
-@import './04_layout/thumbnails.scss';
+@import './04_layout/projects.scss';
 @import './04_layout/header.scss';
