--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -4,52 +4,11 @@
 ////
 ///////
 
-.works__content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 32px;
+.project__content {
+  margin: 0 0 4rem 0;
 }
 
-.works__card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 300px;
-  height: 400px;
-  margin: 50px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.works__card img {
+.project__image {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.works__card-info {
-  padding: 20px;
-  text-align: center;
-}
-
-.works__card-info h3 {
-  font-size: 24px;
-  margin-top: 20px;
-}
-
-.works__card-info p {
-  font-size: 16px;
-  margin-top: 20px;
-  color: gray;
-}
-
-.works__card-info a {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: lightblue;
-  color: white;
-  text-decoration: none;
-  border-radius: 5px;
+  height: 100%;
 }
