--- a/src/scss/04_layout/_container.scss
+++ b/src/scss/04_layout/_container.scss
@@ -28,6 +28,11 @@
   color: var(--color-primary);
 }
 
+.shape {
+  position: absolute;
+  height: 100vh;
+}
+
 .wrapper-main {
   display: flex;
   position: relative;
@@ -63,27 +68,6 @@
 
 .image-4 {
   top: 0;
-}
-
-.image-gif {
-  animation-duration: 1s;
-  animation-name: fadein;
-  display: block;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-}
-
-@keyframes fadein {
-  from {
-    scale: 0.9;
-    opacity: 0;
-  }
-
-  to {
-    scale: 1;
-    opacity: 1;
-  }
 }
 
 .contact {
