--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -4,15 +4,6 @@
 ////
 ///////
 
-.project__content {
-  margin: 0 0 4rem 0;
-}
-
-.project__image {
-  width: 100%;
-  height: 100%;
-}
-
 canvas {
   position: fixed;
   width: 100vw;
@@ -21,4 +12,24 @@ canvas {
   left: 0;
   z-index: -1;
   overflow: hidden;
+}
+
+.project__content {
+  margin: 0 0 4rem 0;
+}
+
+.project__description {
+  display: flex;
+  justify-content: space-between;
+  margin: 2.4rem 0;
+}
+
+.project__image {
+  width: 100%;
+  height: 100%;
+}
+
+.project__icon {
+  width: 2.4rem;
+  height: 2.4rem;
 }
