--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -19,6 +19,7 @@
 
 /* 04_layout */
 @import './04_layout/nav.scss';
+@import './04_layout/background.scss';
 @import './04_layout/container.scss';
 @import './04_layout/footer.scss';
 @import './04_layout/projects.scss';
