--- a/src/scss/03_system/_typography.scss
+++ b/src/scss/03_system/_typography.scss
@@ -22,6 +22,15 @@
   color: var(--color-secondary);
 }
 
+.text-current {
+  font-family: 'marr_sans_webmedium';
+  font-size: 2.4rem;
+  font-weight: 600;
+  line-height: 4rem;
+  letter-spacing: 0.05px;
+  color: var(--color-secondary);
+}
+
 @media only screen and (max-width: 767px) {
   .text-h1-m {
     font-size: 2.4rem;
