--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -23,5 +23,5 @@
 @import './04_layout/container.scss';
 @import './04_layout/footer.scss';
 @import './04_layout/projects.scss';
-@import './04_layout/services.scss';
+@import './04_layout/about.scss';
 @import './04_layout/header.scss';
