--- a/src/scss/04_layout/_header.scss
+++ b/src/scss/04_layout/_header.scss
@@ -5,6 +5,17 @@
 ///////
 
 .header {
-  width: 100%;
-  margin: 20rem 0;
+  height: 80vh;
+  max-height: calc(100vh - 200px);
+  overflow: hidden;
+}
+
+.row {
+  height: 100%;
+}
+
+.header__title {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
