--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -18,6 +18,10 @@ canvas {
   margin: 0 0 4rem 0;
 }
 
+.project__content-image {
+  overflow: hidden;
+}
+
 .project__description {
   display: flex;
   justify-content: space-between;
@@ -27,9 +31,23 @@ canvas {
 .project__image {
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  object-fit: contain;
+  transition: transform 0.3s ease-in-out;
+}
+
+.project__image:hover {
+  transform: scale(1.1);
 }
 
 .project__icon {
+  position: relative;
   width: 2.4rem;
   height: 2.4rem;
+  transform-origin: bottom;
+  transition: transform 0.3s ease-in-out;
+}
+
+.project__icon:hover {
+  transform: translateY(-100%);
 }
