--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -16,6 +16,9 @@ canvas {
 
 .project__content {
   margin: 0 0 4rem 0;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden; /* cacher la flèche en dehors de la div parent */
 }
 
 .project__content-image {
@@ -25,7 +28,8 @@ canvas {
 .project__description {
   display: flex;
   justify-content: space-between;
-  margin: 2.4rem 0;
+  margin: 1.6rem 0;
+  overflow: hidden;
 }
 
 .project__image {
@@ -33,21 +37,25 @@ canvas {
   height: 100%;
   overflow: hidden;
   object-fit: contain;
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.5s ease-in-out;
 }
 
 .project__image:hover {
-  transform: scale(1.1);
+  transform: scale(1.03);
 }
 
 .project__icon {
-  position: relative;
   width: 2.4rem;
   height: 2.4rem;
-  transform-origin: bottom;
-  transition: transform 0.3s ease-in-out;
+  position: absolute;
+  right: 0;
+  bottom: 0; /* ancrer la flèche en bas de la div parent */
+  transform: translateY(50%);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
-.project__icon:hover {
-  transform: translateY(-100%);
+.project__content:hover .project__icon {
+  transform: translateY(-50%);
+  opacity: 1;
 }
