--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -18,7 +18,20 @@ canvas {
   margin: 0 0 4rem 0;
   cursor: pointer;
   position: relative;
-  overflow: hidden; /* cacher la flèche en dehors de la div parent */
+  overflow: hidden;
+}
+
+.projects__section::after {
+  content: '';
+  display: block;
+  height: 1px;
+  background-color: white;
+  opacity: 0.2;
+  max-width: 134rem;
+  margin: auto;
+  min-width: 0;
+  width: 100%;
+  margin-bottom: 4.8rem;
 }
 
 .project__content-image {
@@ -59,3 +72,5 @@ canvas {
   transform: translateY(-50%);
   opacity: 1;
 }
+
+
