--- a/src/scss/03_system/_typography.scss
+++ b/src/scss/03_system/_typography.scss
@@ -14,7 +14,7 @@
 }
 
 .text-h2 {
-  font-family: 'marr_sans_webmedium';
+  font-family: 'marr_sans_webregular';
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.8rem;
@@ -23,7 +23,7 @@
 }
 
 .text-current {
-  font-family: 'marr_sans_webmedium';
+  font-family: 'marr_sans_webregular';
   font-size: 2.4rem;
   font-weight: 200;
   line-height: 4rem;
