--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -36,11 +36,13 @@ canvas {
 
 .project__content-image {
   overflow: hidden;
+  border-radius: 4px;
 }
 
 .project__description {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 1.6rem 0;
   overflow: hidden;
 }
@@ -50,7 +52,7 @@ canvas {
   height: 100%;
   overflow: hidden;
   object-fit: contain;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 300ms ease-in-out;
 }
 
 .project__image:hover {
@@ -58,17 +60,15 @@ canvas {
 }
 
 .project__icon {
-  width: 2.4rem;
-  height: 2.4rem;
+  width: 3.6rem;
+  height: 3.6rem;
   position: absolute;
   right: 0;
-  bottom: 0; /* ancrer la flèche en bas de la div parent */
-  transform: translateY(50%);
   opacity: 0;
-  transition: all 0.3s ease-in-out;
+  transition: all 250ms ease-in-out;
 }
 
 .project__content:hover .project__icon {
-  transform: translateY(-50%);
+  // transform: translateY(-50%);
   opacity: 1;
 }
