--- a/src/scss/03_system/_button.scss
+++ b/src/scss/03_system/_button.scss
@@ -5,11 +5,10 @@
 ///////
 
 .button {
-  display: inline-block;
-  border: 1px solid var(--color-secondary);
   border-radius: 999px;
-  padding: 0 16px;
-  margin: 0 6px;
+  background: var(--color-secondary);
+  color: var(--color-primary);
+  padding: 8px 16px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
