--- a/src/scss/04_layout/_projects.scss
+++ b/src/scss/04_layout/_projects.scss
@@ -44,6 +44,7 @@ canvas {
   justify-content: space-between;
   align-items: center;
   margin: 1.6rem 0;
+  height: auto;
   overflow: hidden;
 }
 
