--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -16,6 +16,7 @@
 /* 03_system */
 @import './03_system/colors.scss';
 @import './03_system/typography.scss';
+@import './03_system/button.scss';
 
 /* 04_layout */
 @import './04_layout/nav.scss';
