--- a/src/scss/03_system/_button.scss
+++ b/src/scss/03_system/_button.scss
@@ -5,15 +5,24 @@
 ///////
 
 .button {
+  display: flex;
   border-radius: 999px;
   background: var(--color-secondary);
   color: var(--color-primary);
   padding: 8px 16px;
   cursor: pointer;
+  align-items: center;
+  justify-content: center;
   transition: all 0.2s ease-in-out;
 }
 
 .button:hover {
-  background-color: var(--color-secondary);
+  background-color: var(--color-tertiary);
   color: var(--color-primary);
+}
+
+.button__icon {
+  margin-left: 0.8rem;
+  width: 2rem;
+  height: 100%;
 }
